src/objects/ADvendio__AdserverStatusMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ADvendio__ADTECHValue__c</fullName>
        <label>ADTECH Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CampaignItemValue__c</fullName>
        <label>Campaign Item Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__DFPValue__c</fullName>
        <label>DFP Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__SMARTValue__c</fullName>
        <label>SMART Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Adserver Status Mapping</label>
</CustomObject>